\name{spliceRnews}
\title{spliceR news}
\encoding{UTF-8}


\section{Version 1.0.0}{\itemize{
\item
Initial release.
}}
