@@ -1,6 +1,6 @@
 Package: spliceR
-Version: 1.1.3
-Date: 2013/7/18
+Version: 1.3.0
+Date: 2013/12/11
 Title: Classification of alternative splicing and prediction of coding potential from RNA-seq data.
 Author: Johannes Waage <johannes.waage@gmail.com>, Kristoffer Vitting-Seerup <k.vitting.seerup@gmail.com>
 Maintainer: Johannes Waage <johannes.waage@gmail.com>, Kristoffer Vitting-Seerup <k.vitting.seerup@gmail.com>
