@@ -3,6 +3,15 @@
 \encoding{UTF-8}
 
 
+\section{Version 1.1.5}{\itemize{
+\item
+A feature was introduced to handle an issue with gene symbols in Cufflinks (in prepareCuff()).
+\item
+A bug relating to strand-issues with annotatePTC was fixed.
+\item
+Filtering was removed from non-relevant functions.
+}}
+
 \section{Version 1.0.0}{\itemize{
 \item
 Initial release.
